# crypto-data-api

./: .gitignore  README.md  main.py  pyproject.toml  utils.py
.github/workflows/: python-app.yml
alembic/: env.py
db/: db_setup.py  operations.py
db/models/: Constants.py  Klines.py  Symbols.py
routers/: Constants.py  Markets.py  Process.py  Schedule.py  Upload.py
tests/: test_main.py
