[tool.poetry]
name = "crypto-data-api"
version = "0.1.0"
description = "project aims to store and serve crypto data"
authors = ["Ashish Pandey"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.2"
uvicorn = {extras = ["standard"], version = "^0.27.1"}
psycopg2-binary = "^2.9.9"
sqlalchemy-utils = "^0.41.1"
sqlmodel = "^0.0.16"
loggly-python-handler = "^1.0.1"
logtail-python = "^0.2.10"
pytest = "^8.1.1"
httpx = "^0.27.0"
flake8 = "^7.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
